Updated to quarto

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-_site/
-Gemfile.lock
+**/index_cache/
+**/__pycache__
+**/.Rhistory
+*.Rproj*
 *.code-workspace
+**/.ipynb_checkpoints
+**/*_cache/
+/.luarc.json
+/.quarto/
+docs/
