--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,7 +23,8 @@ book:
       chapters:
         - chapters/sc/index.qmd
         - chapters/spatial/index.qmd
-        - chapters/vdj/index.qmd
+        - chapters/immune/index.qmd
+        - chapters/atacseq/index.qmd
     - part: "**Meta Transcriptomics**"
       chapters:
         - chapters/meta/index.qmd
