--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup quarto
         uses: quarto-dev/quarto-actions/setup@v2
-      - run: |
-          quarto --version
+        with:
+          version: 1.4.549
       - name: Render and publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
