Updated title, disabled breadcrumbs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ format:
     title-block-banner: true
     toc: true
     smooth-scroll: true
+    bread-crumbs: false
   epub:
     cover-image: assets/cover.png
 
