--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,24 @@
 # Build and deploy Jekyll site to GitHub Pages
 
-name: deploy
+name: build-deploy
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions: 
-      contents: write
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
@@ -18,10 +26,23 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 1.6.43
-      - name: Render and publish
-        uses: quarto-dev/quarto-actions/publish@v2
+          tinytex: true
+      - run: quarto --version
+      - run: quarto render
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          target: gh-pages
-          render: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: 'docs'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
