Switched license to CC BY-NC-SA

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ book:
   repo-branch: main
   page-footer:
     border: false
-    left: "{{< meta current_year >}} Roy Francis"
+    left: "{{< meta current_year >}} Roy Francis • [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
     right: "Published with [Quarto](https://quarto.org/) v{{< meta quarto_version >}}"
   chapters:
     - index.qmd
